--- a/google_homepage.css
+++ b/google_homepage.css
@@ -24,6 +24,12 @@ nav {
   position:relative;
   float:right;
 }
+.circle {
+  border-radius:100%;
+  border-color:white;
+  border-width:10px;
+  border-style:solid;
+}
 section {
   position:relative;
   top:200px;
