--- a/google_homepage.css
+++ b/google_homepage.css
@@ -36,7 +36,7 @@ section {
   margin:auto;
   position:relative;
   text-align:center;
-  top:200px;
+  top:150px;
   width:50%;
 }
 
@@ -55,8 +55,8 @@ input {
   border:none;
   -webkit-appearance:none;
   float:left;
-  height:18px;
-  margin:0;
+  height:20px;
+  margin:0 0 0 5px;
   padding:0;
   width:280px;
 }
