--- a/google_homepage.css
+++ b/google_homepage.css
@@ -61,9 +61,9 @@ input {
   width:280px;
 }
 
-input:active {
-  border-width:0 !important;
-  border:none !important;
+input:focus, input:active {
+  border-width: 0;
+  border: none;
   -webkit-appearance: none;
 }
 
