--- a/google_homepage.css
+++ b/google_homepage.css
@@ -1,5 +1,7 @@
 body {
   margin:0;
+  font-family: 'Open Sans', sans-serif;
+  color: #000;
 }
 ul {
   list-style-type:none;
@@ -14,8 +16,9 @@ li {
 }
 
 a {
-  color:black;
+  color: #000;
   text-decoration:none;
+
 }
 a:hover {
   text-decoration:underline;
@@ -76,12 +79,13 @@ section img {
 }
 
 footer {
-  background-color:rgb(200,200,200);
+  background: #f2f2f2 ;
   bottom:0;
   height:40px;
-  width:100%;
+  
   margin:0;
   position:fixed;
+  width:100%;
 }
 
 .footer-left {
