--- a/google_homepage.css
+++ b/google_homepage.css
@@ -44,7 +44,7 @@ section {
 }
 
 .search-bar {
-  border:blue solid 1px;
+  border: #BFBFBF solid 1px;
   height:20px;
   margin:auto;
   width:300px;
